--- a/OneDrive/Desktop/monitoring/public/index.html
+++ b/OneDrive/Desktop/monitoring/public/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Power Monitoring Main</title>
   </head>
   <body>
     <div id="root"></div>
